Do not modify input packetChain in Ipv6Decoder
The input should be expected to be immutable, make sure we copy it
accordingly.

Change-Id: Ic83f3711cb8c8d1cad5051dc3dc5d43519bb7f27
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>